name:                  monad-state
version:               0.1.0
cabal-version:         >= 1.2
build-type:            Simple
license:               BSD3
license-file:          LICENSE
copyright:             Copyright (C) 2010 Byron James Johnson
author:                Byron James Johnson
maintainer:            KrabbyKrap@gmail.com
synopsis:              Utility library for monads, particularly those involving state
description:           Utility library for monads, particularly those involving state
category:              Data
tested-with:           GHC == 6.12.3

library
    hs-source-dirs:    src
    build-depends:     base >= 4 && < 5, fclabels, transformers, monads-tf, AbortT-transformers
    exposed-modules:   Control.Monad.Abort, Control.Monad.Abort.Class, Control.Monad.Abort.Instances, Control.Monad.Record, Control.Monad.Runnable, Control.Monad.Short, System.Timeout.Monad
    ghc-options:       -Wall

source-repository head
    type:              darcs
    location:          http://patch-tag.com/r/bob/monad-state
